--- a/index.html
+++ b/index.html
@@ -42,12 +42,20 @@
 
         <ul class="list auth-nav">
           <li class="auth-nav-item">
-            <a href="mailto:info@devstudio.com" class="link"
-              >info@devstudio.com</a
+            <a href="mailto:info@devstudio.com" class="auth-nav-link link"
+              ><svg class="header-nav-icon" width="16" height="12">
+                <use href="./images/symbol-defs.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
           <li class="auth-nav-item">
-            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="auth-nav-link link">
+              <svg class="header-nav-icon" width="10" height="16">
+                <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -70,6 +78,12 @@
           <h2 class="visually-hidden">Преимущества</h2>
           <ul class="list feature">
             <li class="feature-item">
+              <div class="feature-item-icon">
+                <svg class="feature-icon" width="70" height="70">
+                  <use href="./images/symbol-defs.svg#icon-antenna"></use>
+                </svg>
+              </div>
+
               <h3 class="title">Внимание к деталям</h3>
               <p class="text">
                 Идейные соображения, а также начало повседневной работы по
@@ -77,6 +91,12 @@
               </p>
             </li>
             <li class="feature-item">
+              <div class="feature-item-icon">
+                <svg class="feature-icon" width="70" height="70">
+                  <use href="./images/symbol-defs.svg#icon-clock"></use>
+                </svg>
+              </div>
+
               <h3 class="title">Пунктуальность</h3>
               <p class="text">
                 Задача организации, в особенности же рамки и место обучения
@@ -84,6 +104,12 @@
               </p>
             </li>
             <li class="feature-item">
+              <div class="feature-item-icon">
+                <svg class="feature-icon" width="70" height="70">
+                  <use href="./images/symbol-defs.svg#icon-diagram"></use>
+                </svg>
+              </div>
+
               <h3 class="title">Планирование</h3>
               <p class="text">
                 Равным образом консультация с широким активом в значительной
@@ -91,6 +117,12 @@
               </p>
             </li>
             <li class="feature-item">
+              <div class="feature-item-icon">
+                <svg class="feature-icon" width="70" height="70">
+                  <use href="./images/symbol-defs.svg#icon-astronaut"></use>
+                </svg>
+              </div>
+
               <h3 class="title">Современные технологии</h3>
               <p class="text">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -146,6 +178,43 @@
               <div class="command-item">
                 <h3 class="title">Игорь Демьяненко</h3>
                 <p lang="en" class="text">Product Designer</p>
+
+                <ul class="command-soc-list list">
+                  <li class="command-soc-item">
+                    <a href="" class="command-soc-link link">
+                      <svg class="command-soc-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="command-soc-item">
+                    <a href="" class="command-soc-link link"
+                      ><svg class="command-soc-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-twitter"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="command-soc-item">
+                    <a href="" class="command-soc-link link"
+                      ><svg class="command-soc-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="command-soc-item">
+                    <a href="" class="command-soc-link link"
+                      ><svg class="command-soc-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="cards">
@@ -158,6 +227,42 @@
               <div class="command-item">
                 <h3 class="title">Ольга Репина</h3>
                 <p lang="en" class="text">Frontend Developer</p>
+                <ul class="command-soc-list list">
+                  <li class="command-soc-item">
+                    <a href="" class="command-soc-link link">
+                      <svg class="command-soc-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="command-soc-item">
+                    <a href="" class="command-soc-link link"
+                      ><svg class="command-soc-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-twitter"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="command-soc-item">
+                    <a href="" class="command-soc-link link"
+                      ><svg class="command-soc-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="command-soc-item">
+                    <a href="" class="command-soc-link link"
+                      ><svg class="command-soc-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="cards">
@@ -170,6 +275,42 @@
               <div class="command-item">
                 <h3 class="title">Николай Тарасов</h3>
                 <p lang="en" class="text">Marketing</p>
+                <ul class="command-soc-list list">
+                  <li class="command-soc-item">
+                    <a href="" class="command-soc-link link">
+                      <svg class="command-soc-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="command-soc-item">
+                    <a href="" class="command-soc-link link"
+                      ><svg class="command-soc-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-twitter"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="command-soc-item">
+                    <a href="" class="command-soc-link link"
+                      ><svg class="command-soc-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="command-soc-item">
+                    <a href="" class="command-soc-link link"
+                      ><svg class="command-soc-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="cards">
@@ -182,6 +323,42 @@
               <div class="command-item">
                 <h3 class="title">Михаил Ермаков</h3>
                 <p lang="en" class="text">UI Designer</p>
+                <ul class="command-soc-list list">
+                  <li class="command-soc-item">
+                    <a href="" class="command-soc-link link">
+                      <svg class="command-soc-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="command-soc-item">
+                    <a href="" class="command-soc-link link"
+                      ><svg class="command-soc-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-twitter"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="command-soc-item">
+                    <a href="" class="command-soc-link link"
+                      ><svg class="command-soc-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="command-soc-item">
+                    <a href="" class="command-soc-link link"
+                      ><svg class="command-soc-icon" width="20" height="20">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -189,27 +366,106 @@
       </section>
     </main>
 
+    <!-- Клиенты -->
+    <section class="clients section">
+      <div class="container">
+        <h2 class="clients-title section-title">Постоянные клиенты</h2>
+        <ul class="clients-list list">
+          <li class="clients-item">
+            <a href="" class="clients-link link"
+              ><svg class="clients-icon" width="41" height="47">
+                <use href="./images/symbol-defs.svg#icon-company-1"></use></svg
+            ></a>
+          </li>
+          <li class="clients-item">
+            <a href="" class="clients-link link"
+              ><svg class="clients-icon" width="40" height="52">
+                <use href="./images/symbol-defs.svg#icon-company-2"></use></svg
+            ></a>
+          </li>
+          <li class="clients-item">
+            <a href="" class="clients-link link"
+              ><svg class="clients-icon" width="43" height="41">
+                <use href="./images/symbol-defs.svg#icon-company-3"></use></svg
+            ></a>
+          </li>
+          <li class="clients-item">
+            <a href="" class="clients-link link"
+              ><svg class="clients-icon" width="85" height="41">
+                <use href="./images/symbol-defs.svg#icon-company-4"></use></svg
+            ></a>
+          </li>
+          <li class="clients-item">
+            <a href="" class="clients-link link"
+              ><svg class="clients-icon" width="63" height="46">
+                <use href="./images/symbol-defs.svg#icon-company-5"></use></svg
+            ></a>
+          </li>
+          <li class="clients-item">
+            <a href="" class="clients-link link"
+              ><svg class="clients-icon" width="94" height="44">
+                <use href="./images/symbol-defs.svg#icon-company-6"></use></svg
+            ></a>
+          </li>
+        </ul>
+      </div>
+    </section>
+
     <!-- Подвал -->
     <footer class="footer">
       <div class="container">
-        <a href="./index.html" class="footer-logo">
-          <span class="footer-logo-accent">Web</span>Studio
-        </a>
-        <address>
-          <p class="footer-adress">г. Киев, пр-т Леси Украинки, 26</p>
-          <ul class="list">
-            <li class="footer-nav">
-              <a href="mailto:info@example.com" class="footer-link"
-                >info@example.com</a
-              >
+        <div class="footer-adress-container">
+          <a href="./index.html" class="footer-logo">
+            <span class="footer-logo-accent">Web</span>Studio
+          </a>
+          <address>
+            <p class="footer-adress">г. Киев, пр-т Леси Украинки, 26</p>
+            <ul class="list">
+              <li class="footer-nav">
+                <a href="mailto:info@example.com" class="footer-link"
+                  >info@example.com</a
+                >
+              </li>
+              <li class="footer-nav">
+                <a href="tel:+380991111111" class="footer-link"
+                  >+38 099 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+
+        <div class="footer-soc-links">
+          <p class="footer-soc-links-title">присоединяйтесь</p>
+          <ul class="footer-soc-list list">
+            <li class="footer-soc-item">
+              <a href="" class="footer-soc-link link">
+                <svg class="cfooter-soc-icon" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li class="footer-nav">
-              <a href="tel:+380991111111" class="footer-link"
-                >+38 099 111 11 11</a
-              >
+            <li class="footer-soc-item">
+              <a href="" class="footer-soc-link link"
+                ><svg class="footer-soc-icon" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-twitter"></use></svg
+              ></a>
+            </li>
+            <li class="footer-soc-item">
+              <a href="" class="footer-soc-link link"
+                ><svg class="footer-soc-icon" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-soc-item">
+              <a href="" class="footer-soc-link link"
+                ><svg class="footer-soc-icon" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-linkedin"></use></svg
+              ></a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
