--- a/portfolio.html
+++ b/portfolio.html
@@ -42,12 +42,19 @@
 
         <ul class="list auth-nav">
           <li class="auth-nav-item">
-            <a href="mailto:info@devstudio.com" class="link"
-              >info@devstudio.com</a
+            <a href="mailto:info@devstudio.com" class="auth-nav-link link"
+              ><svg class="header-nav-icon" width="16" height="12">
+                <use href="./images/symbol-defs.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
           <li class="auth-nav-item">
-            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="auth-nav-link link">
+              <svg class="header-nav-icon" width="10" height="16">
+                <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a>
           </li>
         </ul>
       </div>
@@ -208,24 +215,58 @@
     <!-- Подвал -->
     <footer class="footer">
       <div class="container">
-        <a href="./index.html" class="footer-logo">
-          <span class="footer-logo-accent">Web</span>Studio
-        </a>
-        <address>
-          <p class="footer-adress">г. Киев, пр-т Леси Украинки, 26</p>
-          <ul class="list">
-            <li class="footer-nav">
-              <a href="mailto:info@example.com" class="footer-link"
-                >info@example.com</a
-              >
+        <div class="footer-adress-container">
+          <a href="./index.html" class="footer-logo">
+            <span class="footer-logo-accent">Web</span>Studio
+          </a>
+          <address>
+            <p class="footer-adress">г. Киев, пр-т Леси Украинки, 26</p>
+            <ul class="list">
+              <li class="footer-nav">
+                <a href="mailto:info@example.com" class="footer-link"
+                  >info@example.com</a
+                >
+              </li>
+              <li class="footer-nav">
+                <a href="tel:+380991111111" class="footer-link"
+                  >+38 099 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+
+        <div class="footer-soc-links">
+          <p class="footer-soc-links-title">присоединяйтесь</p>
+          <ul class="footer-soc-list list">
+            <li class="footer-soc-item">
+              <a href="" class="footer-soc-link link">
+                <svg class="cfooter-soc-icon" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li class="footer-nav">
-              <a href="tel:+380991111111" class="footer-link"
-                >+38 099 111 11 11</a
-              >
+            <li class="footer-soc-item">
+              <a href="" class="footer-soc-link link"
+                ><svg class="footer-soc-icon" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-twitter"></use></svg
+              ></a>
+            </li>
+            <li class="footer-soc-item">
+              <a href="" class="footer-soc-link link"
+                ><svg class="footer-soc-icon" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-soc-item">
+              <a href="" class="footer-soc-link link"
+                ><svg class="footer-soc-icon" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-linkedin"></use></svg
+              ></a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
